# mpitutorial

OpenMP/ejercicios clase/: a.out  pi.c
metaheuristica/armadillo-6.700.4/: ArmadilloConfig.cmake  CMakeCache.txt  Makefile  README.txt  cmake_install.cmake  install_manifest.txt
metaheuristica/armadillo-6.700.4/tmp/include/armadillo_bits/: config.hpp
metaheuristica/source_TSP/: .gitignore  test.tsp
metaheuristica/source_TSP/c++/: CMakeLists.txt  TSP.cc  TSP.h  main  main.cc  random.cc  test.cc  test_seq
metaheuristica/source_TSP/python/: TSP.py  test.py
mpiPractica1/: mpi_hello.c  sec_disteuc  sec_disteuc.c  sec_disteuc_mpi  sec_disteuc_mpi.c
mpiPractica2 - producto vectores/: producto_vectores_mpi  producto_vectores_mpi.c  producto_vectores_mpi.cpp
mpiPractica3/: byvectorh.c  byvectorm.c  byvectorv  byvectorv.c  multiplyArrays.c
mpiPractica3/entrega/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mpi_multmatrix  mpi_multmatrixseq.c  mpi_multmatrixseq_1.c  mpi_multmatrixseq_2.c  mpi_multmatrixseq_3.c  mpi_multmatrixseq_funcional.c  mpi_multmatrixseq_funcional_2.c  multiplyArrays.c  multmatrix  multmatrixseq  sec_multmatrix.c  sec_multmatrixseq.c
tutorials/mpi-send-and-receive/code/: makefile  ping_pong  ping_pong_mod  ping_pong_mod.c  ring  ring.c  send_recv
